# PepBenchmark

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedoc.yaml  MANIFEST.in  README.md  TESTING.md  dataset_paths.py  dataset_paths.yaml  environment.yaml  environment.yml  pyproject.toml  requirment.txt
assets/: license_header.txt
docs/: base_splitter_rewrite_summary.md  base_splitter_usage.md  mmseqs2_parameters_guide.md  preprocessing_guide.md
docs/source/: README.md  conf.py  contributing.md  contruct_dataset.md  index.rst  introduction.md  leaderbroad.md
docs/source/api/: convert.md  evaluator.md  modules.rst  pepbenchmark.dataset_loader.rst  pepbenchmark.multi_pred.rst  pepbenchmark.pep_utils.rst  pepbenchmark.rst  pepbenchmark.single_peptide.rst  pepbenchmark.single_pred.rst  pepbenchmark.splitter.rst  pepbenchmark.utils.rst  pepbenchmark.visualization.rst
docs/source/dataset/: AV_APML.md  b.md  index.rst
docs/source/datasets/: multitask_peptidepedia.md  overview.md
docs/source/examples/: property_prediction.md
docs/source/prerequisite/: installation.md  introduction.md  quickstart.md
docs/source/user_guide/: README.md  converter.md  data_manager.md  data_splitting.md  evaluation_metrics.md  index.md  neg_sampler.md  preprocessing.md  (+2 more)
examples/property_pred/: readme.md
notebook/: basic.ipynb  construct_dataset.ipynb  train_models.ipynb
scripts/: pre-commit-test.sh  validate-basic.sh
src/pepbenchmark/: __init__.py  evaluator.py  example.py  exceptions.py  metadata.py  prepare.py  preprocess.py  raw_data.py  reconstruct_pos.py  try.py
(+104 files in other folders)
