[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pepbenchmark"
version = "0.1.0"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["your_package_name"]
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py39"
extend-select = ["E", "F", "B", "C", "I", "N", "T"]
ignore = ["E203", "E501"]   # 从列表里去掉 W503
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
  "examples",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
